--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@vercel/analytics": "^1.2.2",
     "dotenv": "^16.4.5",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
